# ubook

./: .gitignore  <深入理解视频编解码技术>.md  AVStreamStudyPlan.md  H.264编解码技术.xmind  Interview.md  InterviewWithAnswer.md  README.md  StudyPlan.md  interview.md  x264使用文档.xmind  x264参数介绍.md
H.264/: x264源码分析.md
algorithm/: CMakeLists.txt
algorithm/array/: 11.cc  15.cc  16.cc  18.cc  31.cc  33.cc  34.cc  36.cc  39.cc  45.cc  core
algorithm/cmd/: main.cc  test.cc  test.h  tmp.cc
algorithm/labuladong/: binary_search_tree.cc  list.cc  tree.cc
algorithm/list/: 02-01.cc  02-02.cc  02-03.cc  02-06.cc  02-07.cc  1290.cc  138.cc  141.cc  142.cc  143.cc  146.cc  147.cc  148.cc  160.cc  1721.cc  19.cc  2.cc  203.cc  206.cc  21.cc  234.cc  237.cc  24.cc  328.cc  382.cc  445.cc  61.cc  82.cc  83.cc  86.cc  876.cc  92.cc  list.cc  offer-06.cc  offer-18.cc  offer-22.cc  offer-24.cc  offer-25.cc  offer-52.cc  offer2-23.cc  (+2 more)
algorithm/tree/: 100.cc  94.cc  patch-1.cc  patch.cc  tree.cc
av-tec/: StudyPlan.md
av-tec/avcodec/: avcodec.md
av-tec/ffmpeg/: avfilter.md  ffmpeg-core-apis.md  ffmpeg-core-structures.md  ffmpeg-manual-samples.md  ffmpeg-manual.md
av-tec/ffmpeg/demo/: CMakeLists.txt  make.sh
av-tec/ffmpeg/demo/cmd/: a  main.cc  pcm_to_aac.cc  pcm_to_aac.cc.old
av-tec/ffmpeg/demo/include/: audio.h  avio.h  avio_read.h  decode.h  defer.h  st_audio_extract.h
av-tec/ffmpeg/demo/src/: audio.cc  avio.cc  avio_read.cc  decode.cc  st_audio_extract.cc
av-tec/ffmpeg/demo/test/: avio  avio.cc  make.sh
av-tec/ffmpeg/interface/: CMakeLists.txt
av-tec/ffmpeg/interface/examples/: transcoding.c
av-tec/ffmpeg/interface/fftools/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c  ffplay.c
avstream/: 音视频开发-01.md  音视频开发.md
c++/: cpp_reference.md
interview/: c++.md
language/c++/: C++工具包.md  (+12 more)
network/: grpc原理解析.md  http.md  http协议详解.md  http官方文档.md  tcp-ip.md  认证和权限.md  趣谈网络协议.md  透视http协议.md
os/: shell工具包.md  shell语法糖.md  趣谈Linux操作系统.md
solution/: 01.md
深入理解视频编解码技术/: H.264编解码技术.xmind  x264参数介绍.md  深入理解视频编解码技术.xmind
(+200 files in other folders)
